Portfolio Reel order change

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -118,19 +118,6 @@
 
 
 
-			<div class="container padding-top padding-bottom animated">
-				<div class="row transform">
-					<div class="col-lg-12">
-
-						<div class="description description--left">
-							<h2>Work Reel</h2>
-						</div>
-						<iframe src="https://player.vimeo.com/video/609243986?h=39130cc2c9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-
-
 			<div class="container animated">
 				<div class="row transform">
 					<div class="col-lg-12">
@@ -195,6 +182,17 @@
 			</div>
 
 
+			<div class="container padding-top padding-bottom animated">
+				<div class="row transform">
+					<div class="col-lg-12">
+
+						<div class="description description--left">
+							<h2>Work Reel</h2>
+						</div>
+						<iframe src="https://player.vimeo.com/video/609243986?h=39130cc2c9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
 
 
 			<div class="container animated">
@@ -233,7 +231,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked on earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
