--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,7 +119,7 @@
 
 
 			<div class="container animated">
-				<div class="row padding-top transform">
+				<div class="row padding-top padding-top transform">
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Work List</h2>
