--- a/about/index.html
+++ b/about/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Luis Herrero - Product Designer">
 	<title>Luis Herrero - Product Designer</title>
 	<link rel="canonical" href="http://luisherrero.es/">
 	<link rel="shortlink" href="http://luisherrero.es/">
-<!--
-	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
--->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -114,7 +116,7 @@
 						</div>
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<p>I've been working in interface design since the last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, spiced up with some programming work across a wide range of technological eras, like when we used the ancient ActionScript language, that you're not supposed to mention, to recent Figma plugin code.</p>
+								<p>I've been working on interface design since last century, crafting products and experiences of all kinds: from <strong>digital advertising</strong> campaigns to <strong>art exhibitions</strong>, salted with some programming work in a variety of ages, like the ancient Actionscript language, that you're not supposed to mention, to recent Figma plugin code.</p>
 							</div>
 						</div>
 					</div>
@@ -128,7 +130,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Background</h2>
-							<p>I've always been passionate about design. I got hooked with Photoshop and 3D Studio Max when I was a teenager and was supposedly playing video games <i class="far fa-smile"></i></p>
+							<p>I've always been passionate about design. I got hooked with Photoshop and 3D Studio Max when I was a teenager and were supposedly playing video games <i class="far fa-smile"></i></p>
 							<p>When I studied <strong>Multimedia App Development (HNC)</strong> back in 1996, I found out that not only software has to work properly, but it has to be presented to the user in a friendly, useful and aesthetic way.</p>
 							<p>That was the moment I decide to focus on how to improve the interface I was building, regardless of product, to make the experience for the user easier and better.</p>
 						</div>
@@ -148,8 +150,8 @@
 								<li>Freelance <span>All of the above plus Teaching and Mentoring</span></li>
 								<li>Plex <span>Product Design / Motion Graphics</span></li>
 							</ul>
-							<p>One of my goals is to be able to keep learning at work. I think the moment I stop learning on a job, it's time to move on to a new challenge.</p>
-							<p>And that's one of the things I'm most excited about working in Product Design,<br>the fact that you need to keep learning new stuff every day, and most of it, thanks to your workmates.</p>
+							<p>One of my goals is to be able to keep learning at work. I think the moment I stop learning on a job, it's time to move to a new challenge.</p>
+							<p>And that's one of the things I'm most excited about working in Product Design.<br>The fact you need to keep learning new stuff every day, and most of it, thanks to your workmates.</p>
 							<p>You can find more about me here:</p>
 							<ul class="workplaces">
 								<li class="social-item">
@@ -191,7 +193,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Clients</h2>
-							<p>I've had the luck of working with lots of amazing brands and companies over the years</p>
+							<p>I had the luck of working with lots of amazing brands and companies over the years</p>
 						</div>
 					</div>
 				</div>
@@ -222,7 +224,7 @@
 					<div class="col-lg-12">
 						<div class="description description--left">
 							<h2>Awards</h2>
-							<p>Some of the advertising pieces I've worked on earned some public recognition in different festivals</p>
+							<p>Some of the advertising pieces I've worked in earned some public recognition in different festivals</p>
 						</div>
 					</div>
 				</div>
