--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Luis Herrero - Product Designer">
 	<title>Luis Herrero - Product Designer</title>
 	<link rel="canonical" href="http://luisherrero.es/">
 	<link rel="shortlink" href="http://luisherrero.es/">
-<!--
-	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
--->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -152,8 +154,8 @@
 					<div class="row padding-top padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<h2>Some background…</h2>
-								<p>Bernardo Rivavelarde and I met quite a long time ago. Initially he asked me to help him with some web development, but after working together on a couple of projects, we decided to collaborate more often.</p>
+								<h2>Some background...</h2>
+								<p>Bernardo Rivavelarde and I met quite a long time ago. Initially he asked me to help him with some web development, but after working together on a couple of projects, we decide to collaborate more often.</p>
 								<p>He's an amazing graphic designer and he creates lovely works of imagery. Normally those designs are meant to be presented as static output, like posters and signages. But when the project needs an additional layer of animation or interaction, that's where my job starts.</p>
 								<p>So, after a few projects working together, and after we collaborated on Homodigitalis, his second exhibition, he asked me to help him developing the motion visuals for his 3rd art exhibition called <strong>Future Nature</strong>.<br>And I couldn't be more excited!!!</p>
 							</div>	
@@ -189,7 +191,7 @@
 							<div class="description description--right">
 								<h2>Adding the Soundtrack</h2>
 								<p><strong>The Lab</strong> did a different approach on this work and instead of adjusting the animation to the music track, they decided to do the ambient music and effects after the animation was completed.</p>
-								<p>It was an amazing piece of musical engineering because we only needed to adjust a few frames on the animation to make it work at 100%. No need to say that the soundtrack is outstanding as always.</p>
+								<p>It was an amazing piece of musical engineering because we only need to adjust a few frames on the animation to make it work at 100%. No need to say that the soundtrack is outstanding as always.</p>
 							</div>
 						</div>
 					</div>
@@ -203,8 +205,8 @@
 							<div class="description description--left">
 								<h2>Animation Techniques</h2>
 								<p>The heart of this art piece is all about creativity. So you can explore a lot of different ways to express, as long as it works with the narrative of the animation.</p>
-								<p>So we use lots of different animation techniques. From frame-by-frame animation, to programmatic one using expressions.</p>
-								<p>From organic transitions to static and frozen frame animations, across path animation, camera tracking techniques… you name it.</p>
+								<p>So we use and lots of different animation techniques. From frame-by-frame animation, to programmatic one using expressions.</p>
+								<p>From organic transitions to static and frozen frame animations, across path animation, camera tracking techniques... you name it.</p>
 								<p>But every technique had a purpose: <strong>Amplify the message of the motion narrative</strong>.<br>One of the things I learned when I was doing my animation training courses, was that every effect and movement has to have a reason. Not because you can use something, you need to do it.</p>
 							</div>
 						</div>
