--- a/mentoring/index.html
+++ b/mentoring/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Luis Herrero - Product Designer">
 	<title>Luis Herrero - Product Designer</title>
 	<link rel="canonical" href="http://luisherrero.es/">
 	<link rel="shortlink" href="http://luisherrero.es/">
-<!--
-	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
--->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -124,10 +126,10 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Teaching</h2>
-								<p>I started my teaching career on <a href="https://www.cice.es" target="socila">CICE</a>, where I taught Motion Graphics, Web development with HTML + CSS + JS for more than 9 years.</p>
-								<p>That was an amazing time where I had the chance to meet tons of people eager to learn a new career. I'm still in touch with so many of them, and it's really rewarding to see that now they are working and shaping the web development industry.</p>
-								<p>I've also done some in-company training to help improve workflows, toolsets, and knowledge. From advertising companies venturing into the mobile web landscape to some design firms that needed to deal with fluid designs on mobile devices.</p>
-							</div>
+								<p>I started my teaching career on <a href="https://www.cice.es" target="socila">CICE</a>, where I taught Motion Graphics, Web development with HTML + CSS + JS, for more than 9 years.</p>
+								<p>That was an amazing time where I had the chance to meet tons of people eager to learn a new career. I'm still in touch with so many of them, and it's really rewarding to see that now are working and shaping the web development industry.</p>
+								<p>I've also done some in-company formation to help improve their workflow, toolset, and knowledge. From advertising companies venturing into the mobile web landscape to some design firms that needed to deal with fluid designs on mobile devices.</p>
+							</div>	
 						</div>
 					</div>
 				</div>
@@ -136,11 +138,11 @@
 					<div class="row padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--right">
-								<h2>Online training</h2>
+								<h2>Online formation</h2>
 								<p>Last year, when we stayed at home under the lockdown, I decided to help a bit and did a Figma training course with people that were without a job due to COVID.</p>
-								<p>It was only 14 classes, nothing too fancy, but again, the idea was to help a bit. The awesome outcome is that some of the students are now working in design-related jobs!</p>
-								<p>My latest venture in online training has been doing a UX Master Course with <a href="https://www.eoi.es/es" target="socila">EOI</a> where I was teaching Visual Design. And I'm going to be Training Director in the upcoming course that starts in the Fall.</p>
-							</div>
+								<p>It was only like 14 classes, nothing too fancy, but again, the idea was to help a bit. The awesome outcome is that some of the students are now working on design-related jobs!</p>
+								<p>My latest venture on online formation has been doing a UX Master Course with <a href="https://www.eoi.es/es" target="socila">EOI</a> where I was teaching Visual Design. And I'm going to be Formation Director in the upcoming course that starts in Fall.</p>
+							</div>	
 						</div>
 					</div>
 				</div>
@@ -158,7 +160,7 @@
 						<div class="col-lg-12">
 							<div class="description description--left">
 								<h2>Mentoring</h2>
-								<p>I don't always have time to do full training courses, so I've found online mentoring a nice way of continuining to help out people in regards to their design and animation skills, as well as doing some portfolio reviews.</p>
+								<p>I don't always have time to do full training courses, so I've found online mentoring as a nice way of keep helping out people regarding design and animation discussion, as well as doing some portfolio reviews.</p>
 								<p>You can book some time with me here:</p>
 								<ul class="workplaces">
 									<li class="social-item">
