--- a/ishows/index.html
+++ b/ishows/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Luis Herrero - Product Designer">
 	<title>Luis Herrero - Product Designer</title>
 	<link rel="canonical" href="http://luisherrero.es/">
 	<link rel="shortlink" href="http://luisherrero.es/">
-<!--
-	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
--->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
@@ -151,7 +153,7 @@
 					<div class="row padding-top padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<h2>I'm not going to start coding again but…</h2>
+								<h2>I'm not going to start coding again but...</h2>
 								<p>Ok, there was a time I wanted to learn Objective-C. I actually took some classes and by the end of the course, I realized 2 things: In order to be a proper programmer, I would have to commit full time and I wasn't willing to drop my design job. The other was I was eager to collaborate with that course teacher because he really knows how to code.</p>
 								<p>After a couple of "meetings", we decided to do a TV tracker app for iOS. And there's no need to say that Luis Recuenco, my iShows partner, has become also one of my best friends!</p>
 							</div>
@@ -171,7 +173,7 @@
 					<div class="row padding-top padding-bottom transform">
 						<div class="col-lg-12">
 							<div class="description description--left">
-								<h2>A TV app, ok… but what would be our personal touch?</h2>
+								<h2>A TV app, ok... but what would be our personal touch?</h2>
 								<p>Even at that time, the landscape of TV Show tracker apps was a bit crowded, so in order to make a stab there, we should provide our users a fresh, newer experience in order to drop other apps.</p>
 								<p>The key for us was <strong>personalization</strong> and make the app <strong>super easy to use</strong>, so we picked the idea behind Apple <strong>i-products</strong> and make the app something unique to the user. Something they might feel as personal.</p>
 							</div>
@@ -206,7 +208,7 @@
 							<div class="description description--left">
 								<h2>What else do we have to do?</h2>
 								<p>It was a really crazy experience for both of us. We have to do the same things a company does but with a crew of only two.</p>
-								<p>Fortunately, we had wide feedback when developing the app: From beta testers to friends, translators, and media (bloggers, podcasters, etc)</p>
+								<p>But fortunately, we had wide feedback when developing the app: From beta testers to friends, translators, and media (bloggers, podcasters, etc)</p>
 								<p>Thinking about it now seems like there were a lot of people that shared our vision on how to develop and design the app and they wanted to help us as much as possible.</p>
 							</div>
 						</div>
