--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Luis Herrero - Product Designer">
 	<title>Luis Herrero - Product Designer</title>
 	<link rel="canonical" href="http://luisherrero.es/">
 	<link rel="shortlink" href="http://luisherrero.es/">
-<!--
-	<link rel="apple-touch-icon" sizes="180x180" href="http://luisherrero.es/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="http://luisherrero.es/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="http://luisherrero.es/favicon/favicon-16x16.png">
--->
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+	<link rel="manifest" href="/images/site.webmanifest">
+	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
+
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
