--- a/ishows/index.html
+++ b/ishows/index.html
@@ -246,6 +246,37 @@
 			</div>
 
 
+				<div class="container">
+					<div class="row padding-bottom">
+						<div class="col-lg-12">
+							<div class="work work--mix">
+								<div class="work-grid">
+									<div class="work-item w-50" data-delay="200">
+										<a href="/plex/" class="work-item__link" aria-label="Open Work">
+											<img src="/images/bg-plex.jpg" alt="">
+										</a>
+										<div class="work-label">
+											<p class="work-label__category" data-hover="Open Work"><span>Product Design</span></p>
+											<h2 class="work-label__title">Plex</h2>
+										</div>
+									</div>
+
+									<div class="work-item w-50" data-delay="400">
+										<a href="/moomios/" class="work-item__link" aria-label="Open Work">
+											<img src="/images/bg-moomios.jpg" alt="">
+										</a>
+										<div class="work-label">
+											<p class="work-label__category" data-hover="Open Work"><span>Motion Graphics</span></p>
+											<h2 class="work-label__title">Moomios</h2>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 
 
 		</div>
