--- a/plex/index.html
+++ b/plex/index.html
@@ -302,6 +302,49 @@
 					</div>
 				</div>
 
+
+
+
+
+				<div class="container">
+					<div class="row padding-bottom">
+						<div class="col-lg-12">
+							<div class="work work--mix">
+								<div class="work-grid">
+
+									<div class="work-item w-50" data-delay="600">
+										<a href="/ishows/" class="work-item__link" aria-label="Open Work">
+											<img src="/images/bg-ishows.jpg" alt="Image Preview 5">
+										</a>
+										<div class="work-label">
+											<p class="work-label__category" data-hover="Open Work"><span>Product Design</span></p>
+											<h2 class="work-label__title">iShows</h2>
+										</div>
+									</div>
+
+									<div class="work-item w-50" data-delay="400">
+										<a href="/moomios/" class="work-item__link" aria-label="Open Work">
+											<img src="/images/bg-moomios.jpg" alt="">
+										</a>
+										<div class="work-label">
+											<p class="work-label__category" data-hover="Open Work"><span>Motion Graphics</span></p>
+											<h2 class="work-label__title">Moomios</h2>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+
+
+
+
+
 			</div>
 		</div>
 
