--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -299,7 +299,7 @@
 
 
 				<div class="container">
-					<div class="row padding-bottom">
+					<div class="row padding-top padding-bottom">
 						<div class="col-lg-12">
 							<div class="work work--mix">
 								<div class="work-grid">
