--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -301,6 +301,7 @@
 				<div class="container">
 					<div class="row padding-top padding-bottom">
 						<div class="col-lg-12">
+							<div class="description"><h2>Other Works</h2></div>
 							<div class="work work--mix">
 								<div class="work-grid">
 									<div class="work-item w-50" data-delay="200">
