--- a/moomios/index.html
+++ b/moomios/index.html
@@ -172,6 +172,7 @@
 				<div class="container">
 					<div class="row padding-top padding-bottom">
 						<div class="col-lg-12">
+							<div class="description"><h2>Other Works</h2></div>
 							<div class="work work--mix">
 								<div class="work-grid">
 
