--- a/ishows/index.html
+++ b/ishows/index.html
@@ -164,7 +164,9 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="ishows-panels.jpg"></div>
+						<div class="col-lg-12 full--width px-0">
+							<a href="ishows-panels.jpg" class="content-image parallax-block" data-source="ishows-panels.jpg"><img src="ishows-panels.jpg"></a>
+						</div>
 					</div>
 				</div>
 
@@ -195,12 +197,14 @@
 					</div>
 				</div>
 
-
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="ishows-screens.jpg" alt="Image6"></div>
+						<div class="col-lg-12 full--width px-0">
+							<a href="ishows-screens.jpg" class="content-image parallax-block" data-source="ishows-screens.jpg"><img src="ishows-screens.jpg"></a>
+						</div>
 					</div>
 				</div>
+
 
 				<div class="container animated">
 					<div class="row padding-top padding-bottom transform">
