--- a/plex/index.html
+++ b/plex/index.html
@@ -165,11 +165,11 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="ios.jpg"></div>
+						<div class="col-lg-12 full--width px-0">
+							<a href="ios.jpg" class="content-image parallax-block" data-source="ios.jpg"><img src="ios.jpg"></a>
+						</div>
 					</div>
-				</div>
-
-	
+				</div>	
 
 
 				<div class="container animated">
@@ -214,7 +214,9 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 px-0"><img src="isometric.png"></div>
+						<div class="col-lg-12 full--width px-0">
+							<a href="isometric.png" class="content-image parallax-block" data-source="isometric.png"><img src="isometric.png"></a>
+						</div>
 					</div>
 				</div>
 
