--- a/plex/index.html
+++ b/plex/index.html
@@ -165,7 +165,7 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 full--width px-0">
+						<div class="col-lg-12 px-0">
 							<a href="ios.jpg" class="content-image parallax-block" data-source="ios.jpg"><img src="ios.jpg"></a>
 						</div>
 					</div>
@@ -214,7 +214,7 @@
 
 				<div class="container-fluid animated">
 					<div class="row opacity">
-						<div class="col-lg-12 full--width px-0">
+						<div class="col-lg-12 px-0">
 							<a href="isometric.png" class="content-image parallax-block" data-source="isometric.png"><img src="isometric.png"></a>
 						</div>
 					</div>
