--- a/ishows/index.html
+++ b/ishows/index.html
@@ -165,7 +165,7 @@
 				<div class="container-fluid animated">
 					<div class="row opacity">
 						<div class="col-lg-12 px-0">
-							<a href="ishows-panels.jpg" class="content-image parallax-block" data-source="ishows-panels.jpg"><img src="ishows-panels.jpg"></a>
+							<a href="ishows-panels.jpg" class="content-imagec" data-source="ishows-panels.jpg"><img src="ishows-panels.jpg"></a>
 						</div>
 					</div>
 				</div>
@@ -200,7 +200,7 @@
 				<div class="container-fluid animated">
 					<div class="row opacity">
 						<div class="col-lg-12 px-0">
-							<a href="ishows-screens.jpg" class="content-image parallax-block" data-source="ishows-screens.jpg"><img src="ishows-screens.jpg"></a>
+							<a href="ishows-screens.jpg" class="content-image" data-source="ishows-screens.jpg"><img src="ishows-screens.jpg"></a>
 						</div>
 					</div>
 				</div>
