--- a/plex/index.html
+++ b/plex/index.html
@@ -166,7 +166,7 @@
 				<div class="container-fluid animated">
 					<div class="row opacity">
 						<div class="col-lg-12 px-0">
-							<a href="ios.jpg" class="content-image parallax-block" data-source="ios.jpg"><img src="ios.jpg"></a>
+							<a href="ios.jpg" class="content-image" data-source="ios.jpg"><img src="ios.jpg"></a>
 						</div>
 					</div>
 				</div>	
@@ -215,7 +215,7 @@
 				<div class="container-fluid animated">
 					<div class="row opacity">
 						<div class="col-lg-12 px-0">
-							<a href="isometric.png" class="content-image parallax-block" data-source="isometric.png"><img src="isometric.png"></a>
+							<a href="isometric.png" class="content-image" data-source="isometric.png"><img src="isometric.png"></a>
 						</div>
 					</div>
 				</div>
