Footer & Deleted rotation msg

--- a/ishows/index.html
+++ b/ishows/index.html
@@ -19,14 +19,14 @@
 
 <body class="smooth-scroll loading ishows">
 
-
+<!--
 <div id="rotation">
 	<div class="rotation-description">
 		<span class="rotation-description__icon"><i class="fas fa-mobile-alt"></i></span>
 		<span class="rotation-description__text">Please Rotate your device to portrait mode!</span>
 	</div>
 </div>
-
+-->
 
 <div id="cursor">
 	<div class="cursor-loader cursor-preloader">
@@ -165,7 +165,7 @@
 				<div class="container-fluid animated">
 					<div class="row opacity">
 						<div class="col-lg-12 px-0">
-							<a href="ishows-panels.jpg" class="content-imagec" data-source="ishows-panels.jpg"><img src="ishows-panels.jpg"></a>
+							<a href="ishows-panels.jpg" class="content-image" data-source="ishows-panels.jpg"><img src="ishows-panels.jpg"></a>
 						</div>
 					</div>
 				</div>
