--- a/chroma-ds/index.html
+++ b/chroma-ds/index.html
@@ -94,7 +94,7 @@
 				<li>
 					<figure>
 						<img src="images/gallery-01.png">
-						<figcaption>MObile device canvas and colors</figcaption>
+						<figcaption>Canvas sizes and colors - Mobile</figcaption>
 					</figure>
 				</li>
 				<li>
