--- a/work/index.html
+++ b/work/index.html
@@ -60,7 +60,7 @@
 				</div></a>
 			</div>
 
-			<div class="work-item"><a href="/chroma/">
+			<div class="work-item"><a href="/chroma-ds/">
 				<div class="frame"><span class="pic chroma"></span></div>
 				<div class="info">
 					<h4>Chroma</h4>
