--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 		<h1><a href="/">Luis Herrero</a></h1>
 		<nav>
 			<a href="/work/">Work<span></span></a>
-			<a href="/motion7">Motion<span></span></a>
 			<a href="/about/">About<span></span></a>
 		</nav>
 	</div>
@@ -71,7 +70,7 @@
 				</div></a>
 			</div>
 
-			<div class="work-item"><a href="/chroma/">
+			<div class="work-item"><a href="/chroma-ds/">
 				<div class="frame"><span class="pic chroma"></span></div>
 				<div class="info">
 					<h4>Chroma</h4>
