Motion section added

--- a/motion/index.html
+++ b/motion/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
-<body class="work">
+<body class="motion">
 <div class="main">
 
 <div class="main-nav">
@@ -34,62 +34,9 @@
  	
 
 
-		<div class="grid-container"><div class="middle grid-work">
-
-
-			<div class="work-item"><a href="/qvc/">
-				<div class="frame"><span class="pic qvc"></span></div>
-				<div class="info">
-					<h4>QVC</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
-
-			<div class="work-item"><a href="/plex-media-player/">
-				<div class="frame"><span class="pic plex"></span></div>
-				<div class="info">
-					<h4>Plex Media Player</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
-
-			<div class="work-item"><a href="/showpal/">
-				<div class="frame"><span class="pic showpal"></span></div>
-				<div class="info">
-					<h4>ShowPal</h4>
-					<p>Product Design</p>
-				</div></a>
-			</div>
-
-			<div class="work-item"><a href="/chroma-ds/">
-				<div class="frame"><span class="pic chroma"></span></div>
-				<div class="info">
-					<h4>Chroma</h4>
-					<p>Design System</p>
-				</div></a>
-			</div>
-
-			<div class="work-item"><a href="/Mummies/">
-				<div class="frame"><span class="pic mummies"></span></div>
-				<div class="info">
-					<h4>Mummies</h4>
-					<p>Motion Design</p>
-				</div></a>
-			</div>
-
-			<div class="work-item"><a href="/future-nature/">
-				<div class="frame"><span class="pic nature"></span></div>
-				<div class="info">
-					<h4>Future Nature</h4>
-					<p>Motion Design</p>
-				</div></a>
-			</div>
-
+		<div class="block"><div class="middle grid">
 
 		</div></div>
-
-
-
 
 
 
@@ -110,6 +57,7 @@
 
 $(document).ready(function()
 {
+
 
 	// INIT GoTop
 	$('.scrollTop').click(function(){
