--- a/future-nature/index.html
+++ b/future-nature/index.html
@@ -26,6 +26,7 @@
 		<h1><a href="/">Luis Herrero</a></h1>
 		<nav>
 			<a href="/work/">Work<span></span></a>
+			<a href="/motion/">Motion<span></span></a>
 			<a href="/about/">About<span></span></a>
 		</nav>
 	</div>
@@ -127,7 +128,7 @@
 
 <footer>
 	<div class="middle">
-		<p class="copyright">2023 © Luis Herrero. All rights reserved.</p>
+		<p class="copyright">2023 © Luis Herrero</p>
 		<a  href="#" class="scrollTop">To Top</a>
 	</div>
 </footer>
