--- a/motion/index.html
+++ b/motion/index.html
@@ -34,7 +34,32 @@
  	
 
 
-		<div class="block"><div class="middle grid">
+		<div class="block video"><div class="middle">
+
+				<video controls autoplay preload="auto" poster="images/poster.png">
+		        	<source src="video/reel.mp4" type="video/mp4" />
+		        	<source src="video/reel.ogv" type="video/ogg" />
+		       	</video>
+
+		       	<p>This reel showcases some of the animation works I've done during my career.</p>
+
+		</div></div>
+
+		<div class="block"><div class="middle col2">
+
+			<div class="copy">
+				<h3>Motion language</h3>
+				<p>As a product designer, I have a strong conviction that motion can <strong>significantly enhance</strong> the visual storytelling of a digital product. Throughout my career, I have had the privilege of working on numerous projects where I have been able to demonstrate the power of this belief.</p>
+				<p>Through motion, we drive the user to a richer, nicer experience, that is <strong>more easy to engage with</strong>, and therefore, create a emotional bound with the experience.</p>
+				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
+				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
+			</div>
+
+			<div class="copy">
+				<h3>Reel</h3>
+				<p>This reel showcases some examples of my work with motion design, animation, interaction, visual effects, and editing.</p>
+				<p></p>
+			</div>
 
 		</div></div>
 
