New file structure and texts

--- a/chroma-ds/index.html
+++ b/chroma-ds/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="index">
@@ -47,9 +47,9 @@
 		<div class="block sepStart"><div class="middle grid">
 			<div class="copy">
 				<h3>A Multiplatform system</h3>
-				<p>Another crucial part of my work at <a href="https://www.plex.tv/" target="_blank">Plex</a> was the creation of <strong>Chroma</strong>, Plex’s design system, built by unifying previous design systems and UI kits with design principles and components.</p>
+				<p>Another crucial part of my work at <a href="https://www.plex.tv/" target="_blank">Plex</a> was the creation of <strong>Chroma</strong>, Plex’s design system, built by unifying previous design systems and UI kits with our design principles and reusable components.</p>
 				<p>We unified icons, colors, spacing, typefaces, and interaction patterns for all platforms and devices, defining the specifics of platform interactions and animation principles.</p>
-				<p>The goal of <strong>Chroma</strong> was to provide a consistent visual language regardless of the device while having in mind the different platform nuances, like screen sizes, input types, and user context.</p>
+				<p><strong>Chroma</strong>'s goal was to provide a consistent visual language regardless of the device while having in mind the different platform nuances, like screen sizes, input types, and user context.</p>
 			</div>
 			<figure>
 				<img src="images/detail-01.png">
@@ -61,8 +61,9 @@
 		<div class="block"><div class="middle grid">
 			<div class="copy">
 				<h3>For everyone</h3>
+				<p>We wanted to have a holistic design system made by and for everyone.</p>
 				<p>Working closely with the Marketing team, Plex brand requirements were seamlessly integrated into <strong>Chroma</strong>. This allowed all materials generated through the design system to be used in communication pieces.</p>
-				<p>Our collaboration with the Development team was very close and we even created Figma plugins using the same code as the production team to generate visual assets.</p>
+				<p>Our continuous collaboration with the Development team led us to create Figma plugins using the same code as the production team to generate visual assets.</p>
 				<p><strong>Chroma</strong> helped ensure that the designs created during the design phase were accurately translated into the final production phase.</p>
 			</div>
 			<figure>
