--- a/plex-media-player/index.html
+++ b/plex-media-player/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="index">
@@ -47,8 +47,8 @@
 		<div class="block sepStart"><div class="middle grid">
 			<div class="copy">
 				<h3>A seamless experience</h3>
-				<p>During my time there, I was responsible for the <strong>media playback feature</strong>, which had to support multiple video and audio formats, like Movies, TV Shows, linear TV, Podcasts, Home videos, etc.</p>
-				<p>The goal was to have a <strong>consistent experience</strong> regardless the media type, device, or platform, which included several, like mobile, TV, desktop, or even video consoles.</p>
+				<p>During my time there, among other things,  I was responsible for the <strong>media playback feature</strong>, which had to support multiple video and audio formats, like Movies, TV Shows, linear TV, Podcasts, Home videos, etc.</p>
+				<p>The objective was to guarantee a <strong>consistent experience</strong> regardless of the media format, device, or platform utilized, including mobile phones, televisions, desktop computers, or gaming consoles.</p>
 				<p><a href="https://www.plex.tv/media-server-downloads/#plex-app" class="button" target="_blank">Get the players</a></p>
 			</div>
 			<figure>
@@ -61,8 +61,8 @@
 		<div class="block"><div class="middle grid">
 			<div class="copy">
 				<h3>Improving Features</h3>
-				<p>With constant communication with stakeholders, we defined the strategy to improve the experience regardless of the device.</p>
-				<p>As a result, the features designed and developed have been implemented across all platforms, but they were <strong>specifically optimized</strong> for each one to ensure a powerful and uniform experience for the customer.</p>
+				<p>With constant communication with stakeholders, we defined the strategy to improve the overall experience regardless of the device.</p>
+				<p>The features that were designed and developed have been implemented across all platforms, creating a unified experience. They were <strong>specifically optimized</strong> for each platform to ensure a robust and uniform experience for customers.</p>
 			</div>
 			<figure>
 				<img src="images/detail-02.png">
