--- a/showpal/index.html
+++ b/showpal/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="index">
@@ -47,8 +47,9 @@
 		<div class="block sepStart"><div class="middle grid">
 			<div class="copy">
 				<h3>Keep track of your TV Shows</h3>
-				<p><a href="https://apps.apple.com/app/id992387872" target="_blank">ShowPal</a> (formerly known as iShows)  was born to have all your TV shows watching history up to date in an easy-to-use app.</p>
-				<p>Our goal was to establish an emotional connection between the user and the app, so we focused on <strong>personalization and customization</strong> as key factors to the product.<br> Additionally, we implemented a <strong>gesture-driven interface</strong> to enhance the overall user experience.</p>
+				<p><a href="https://apps.apple.com/app/id992387872" target="_blank">ShowPal</a> (formerly known as iShows) was born to have all your TV shows watching history up to date in an easy-to-use app.</p>
+				<p>Our goal was to establish an emotional connection between the user and the app, so we focused on <strong>personalization and customization</strong> as key factors to the product.</p>
+				<p>Additionally, we implemented a <strong>gesture-driven interface</strong> to enhance the overall user experience.</p>
 				<p><a href="https://apps.apple.com/app/id992387872" class="button" target="_blank">Download the app</a></p>
 			</div>
 			<figure>
