--- a/motion/index.html
+++ b/motion/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="motion">
@@ -36,7 +36,7 @@
 
 		<div class="block video"><div class="middle">
 
-				<video controls autoplay preload="auto" poster="images/poster.png">
+				<video controls preload="auto" poster="images/poster.png">
 		        	<source src="video/reel.mp4" type="video/mp4" />
 		        	<source src="video/reel.ogv" type="video/ogg" />
 		       	</video>
@@ -48,17 +48,18 @@
 		<div class="block"><div class="middle col2">
 
 			<div class="copy">
-				<h3>Motion language</h3>
-				<p>As a product designer, I have a strong conviction that motion can <strong>significantly enhance</strong> the visual storytelling of a digital product. Throughout my career, I have had the privilege of working on numerous projects where I have been able to demonstrate the power of this belief.</p>
-				<p>Through motion, we drive the user to a richer, nicer experience, that is <strong>more easy to engage with</strong>, and therefore, create a emotional bound with the experience.</p>
-				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
-				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
+				<h3>Motion as a language</h3>
+				<p>As a designer, I firmly believe motion can <strong>significantly enhance</strong> the visual storytelling of a digital product.</p>
+				<p>In my career,  I have had the opportunity to showcase the strength of this conviction through my involvement in several projects.</p>
+				<p>Smartly using motion, we can drive the user to a richer, improved experience that is <strong>easier to engage with</strong>, and therefore we could create an emotional bond between the user and the product.</p>
 			</div>
 
 			<div class="copy">
 				<h3>Reel</h3>
 				<p>This reel showcases some examples of my work with motion design, animation, interaction, visual effects, and editing.</p>
-				<p></p>
+				<p>And here you can check some motion-oriented works:</p>
+				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
+				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
 			</div>
 
 		</div></div>
