--- a/qvc/index.html
+++ b/qvc/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="index">
@@ -84,7 +84,6 @@
 					<li>Search Engine</li>
 				</ul>
 				<p>The <strong>website's foundation</strong> has remained strong for over a year now, which is impressive.</p>
-				<p>Follow this link to see for yourself:</p>
 				<p><a href="https://plus.qvc.com" class="button" target="_blank">Visit website</a></p>
 			</div>
 			<figure>
