--- a/work/index.html
+++ b/work/index.html
@@ -15,7 +15,7 @@
 	<link rel="manifest" href="/images/site.webmanifest">
 	<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
 
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body class="work">
@@ -69,7 +69,7 @@
 				</div></a>
 			</div>
 
-			<div class="work-item"><a href="/Mummies/">
+			<div class="work-item"><a href="/mummies/">
 				<div class="frame"><span class="pic mummies"></span></div>
 				<div class="info">
 					<h4>Mummies</h4>
