--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div></a>
 			</div>
 
-			<div class="work-item"><a href="/Mummies/">
+			<div class="work-item"><a href="/mummies/">
 				<div class="frame"><span class="pic mummies"></span></div>
 				<div class="info">
 					<h4>Mummies</h4>
