--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
+
 <body class="index">
 <div class="main">
 
@@ -38,6 +39,7 @@
 
 		<div class="hero-home"><div class="middle">
 			<p>Hi!<br>My name is <strong>Luis Herrero</strong> and I'm a Product & Interaction Designer</p>
+			<div class="front"></div><div id="particles-js"></div>
 		</div></div>
 
 
@@ -115,13 +117,10 @@
 </html>
 
 
-<script src="js/jquery-3.6.0.min.js" ></script>
+<script src="js/jquery-3.6.0.min.js"></script>
 <script type="text/javascript">
-
 $(document).ready(function()
 {
-
-	// INIT GALLERY
 
 	// INIT GoTop
 	$('.scrollTop').click(function(){
@@ -130,6 +129,65 @@ $(document).ready(function()
 	})
 
 })
+</script>
+<script src="js/particles.min.js"></script>
+<script type="text/javascript">
+	particlesJS('particles-js',
+  
+  {
+    "particles": {
+      "number": {
+        "value": 60,
+        "density": {
+          "enable": true,
+          "value_area": 800
+        }
+      },
+      "color": {
+        "value": "#ffffff"
+      },
+      "shape": {
+        "type": "edge",
+        "stroke": {
+          "width": 0,
+          "color": "#000000"
+        },
+        "polygon": {
+          "nb_sides": 5
+        }
+      },
+      "opacity": {
+        "value": 0.5,
+        "random": false,
+        "anim": {
+          "enable": false
+        }
+      },
+      "size": {
+        "value": 3,
+        "random": true,
+        "anim": {
+          "enable": false
+        }
+      },
+      "line_linked": {
+        "enable": false
+      },
+      "move": {
+        "enable": true,
+        "speed": 4,
+        "direction": "bottom-right",
+        "random": false,
+        "straight": false,
+        "out_mode": "out",
+        "attract": {
+          "enable": false
+        }
+      }
+    },
+    "retina_detect": true
+  }
 
+);
 </script>
 
