Revert "Text tweaks"
This reverts commit adc9059cb639f1f0a4968cd3e616aed2f8de91ff.

--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 			<div class="copy">
 				<h3>About Me</h3>
 				<p>I'm an experienced <strong>Product and Interaction Designer</strong> interested in crafting practical solutions to create meaningful user experiences.</p>
-				<p>I take charge of the entire design process, starting from research and incorporating innovative interaction patterns to design static and animated interfaces, all the way to production handoff. My goal is to create <strong>engaging experiences</strong> that can be enjoyed across various platforms, including web, desktop, mobile, and TV.</p>
+				<p>I take charge of the entire design process, starting from research and incorporating innovative interaction patterns, static and animated interfaces, all the way to production handoff. My goal is to create <strong>engaging experiences</strong> that can be enjoyed across various platforms, including web, desktop, mobile, and TV.</p>
 				<p>I’ve thrived in <strong>agile</strong> product design teams and <strong>fast-paced</strong> branding and advertising environments. Having deep experience handling high-pressure situations, I have built a reputation for <strong>delivering consistent successes</strong> based on tight processes and effective communication.</p>
 			</div>
 		</div></div>
@@ -48,10 +48,10 @@
 			<div class="icons"></div>
 			<div class="copy">
 				<h3>Work Experience</h3>
-				<p>I worked as a Senior Product Designer at <a href="https://www.mews.com" target="_blank">Mews</a>, helping the Accounts team to fulfill several client's requirements, as well as to define many improvements and features.</p>
+				<p>Most recently, I worked as a Senior Product Designer at <a href="https://www.mews.com" target="_blank">Mews</a>, helping the Accounts team to fulfill several client's requirements.</p>
 				<p>Before that, I leaded the design process for <a href="https://www.mews.com" target="_blank">QVC+</a> website. You can learn more about that work <a href="/qvc/" target="_blank">here</a>.</p>
-				<p>I worked at <a href="https://www.plex.tv/" target="_blank">Plex</a> as a Product Designer for more than eight years.<br>During my time there, I was responsible for the mobile platform redesign work (iOS, Android an UWP), the <a href="/plex-media-player/" target="_blank">Media Playback</a> feature, and the creation of <a href="/chroma-ds/" target="_blank">Chroma</a>, Plex's Design System.</p>
-				<p>I started my career as Product Designer with <a href="/showpal/" target="_blank">ShowPal</a>, an iOS app that allows users to keep track of their TV shows watching history up to date in an easy-to-use app.</p>
+				<p>I worked as a Product Design at <a href="https://www.plex.tv/" target="_blank">Plex</a> for more than 8 years. During my time there, I was responsible for the mobile redesign work, the <a href="/plex-media-player/" target="_blank">Media Playback</a> feature and the creation of <a href="/chroma-ds/" target="_blank">Chroma</a>, Plex's Design System.</p>
+				<p>I started my career as Product Design with <a href="/showpal/" target="_blank">ShowPal</a>, an iOS app that allows users to keep track of their TV shows watching history up to date in an easy-to-use app.</p>
 				<p><a href="/work/" class="button" target="_blank">Work Portfolio</a></p>
 			</div>
 		</div></div>
