--- a/motion/index.html
+++ b/motion/index.html
@@ -56,8 +56,7 @@
 
 			<div class="copy">
 				<h3>Reel</h3>
-				<p>Many of the works that I have done have a significant load of animation, from product intros, microsites, and interactive and advertising videos to artistic pieces.</p>
-				<p>These projects required various skills, including motion design, animation, interaction, visual effects, and editing.</p>
+				<p>This reel showcases some examples of my work with motion design, animation, interaction, visual effects, and editing.</p>
 				<p>And here you can check some motion-oriented works:</p>
 				<p><a href="/mummies/" class="button">Mummies · Motion Graphics</a></p>
 				<p><a href="/future-nature/" class="button">Future Nature · Art Exhibition</a></p>
